# generator

./: # A script for predict the adsorption en.py  .gitignore  CDCGAN.py  CGAN.py  README.md  ahia.py  ase_tips.md  bare_surf.traj  gazouno cgan.py  haiti.py  haitiii.py  kaka.py  kari.py  kari3.py  mol.traj  pyproject.toml  requirements.txt  soturontest2.py  step2.py  step45.py  surf.traj  tegd.py  test.3.4.py  test.3.4py.ini
cgan_generator/: cdcgan.py  cgan.py  convert_to_dataframe.py  gazouno_cgan.py  get_reaction_energy.py  make_random_replacement.py  train_and_generate.py
conditional_gan/: get_adsorption_energy.py  get_reaction_energy.py
examples/: .gitignore  POSCAR  example01.py
generator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
generator/cgan_generator/: __init__.py  gazouno_cgan.py  make_random_replacement.py
tests/: .gitignore  bare_surf.traj  catalyst.py  mol.traj  surf.traj  test.py  test_cgan.py
仮2/: kari2.py
