[build-system]
requires      = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name             = "generator"
version          = "0.0.1"
description      = "CGAN utilities for materials generation"
readme           = "README.md"
requires-python  = ">=3.10"
license         = "MIT"
dependencies    = [
    "ase>=3.24.0",
]

